# flask_project

./: Makefile  example.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  new_project.py  pyproject.toml  server2.py  test.py
paging_by_5/: README.md  app.py
paging_by_5/templates/posts/: index.html  show.html
project-12/: Makefile  app.py  data.py  pyproject.toml  validator.py
project-12/templates/courses/: new.html
templates/: index8.html  index9.html
templates/users/: index.html  index7.html  new.html  show.html
