[tool.poetry]
name = "flask-hexlet"
version = "0.1.0"
description = ""
authors = ["Nik Sizov <wwwwwwwww@list.ru>"]
readme = "README.md"
packages = [{include = "flask_hexlet"}]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
